2010-06-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: Added
	  unit test for 'Bug 614045 - Types hidden by members are not
	  formatted properly by ambience'.

2010-06-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Gui/CompletionListWindowTests.cs: Added
	  unit test for 'Bug 613539 - DOBa does not complete to
	  DynamicObjectBase'.

2010-06-11  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor.Tests/ViTests.cs: Added vi key notation
	  parser roundtrip test.

2010-06-10  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor.Tests/ViTests.cs: Add a test for visual mode
	  motion.

2010-06-10  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor.Tests/ViTests.cs: Add a test for deleting to
	  line home/start/zero.

2010-06-10  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.CSharpBinding/FindMemberVisitorTests.cs: Track
	  API spelling.

2010-06-03  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring/GenerateNewMemberTests.cs: Added
	  some insertion cursor tests.

2010-06-02  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor.Tests/ViTests.cs: Added visual line
	  navigation/deletion/paste test.

2010-06-01  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring/GenerateNewMemberTests.cs: Added
	  unit test.

2010-06-01  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring/ExtractMethodTests.cs:
	* MonoDevelop.Refactoring/GenerateNewMemberTests.cs: Worked on
	  insertioncursor unit tests.

2010-05-31  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor.Tests/ViTests.cs: Added tests for dd and cc.

2010-05-31  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor.Tests/ViTests.cs: More tests.

2010-05-31  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring/ExtractMethodTests.cs:
	* MonoDevelop.Refactoring/GenerateNewMemberTests.cs: Worked on
	  unit tests.
