@@ -1,3 +1,8 @@
+2010-06-16  Mike Krüger  <mkrueger@novell.com>
+
+	* Mono.TextEditor.Tests/SyntaxHighlightingTests.cs: Added unit
+	  test for CDATA highlighting.
+
 2010-06-15  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: Added
